--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -66,6 +66,7 @@
     "product_grid_image_style": "medium",
     "social_instagram": "https://www.instagram.com/needle.to.wax/",
     "social_tumblr": "",
+    "social_tiktok": "",
     "social_vimeo": "",
     "social_youtube": "",
     "social_linkedin": "",
@@ -313,6 +314,7 @@
       "swatches_option_style": "color_swatch",
       "swatches_custom_colors": "",
       "social_tumblr": "",
+      "social_tiktok": "",
       "social_vimeo": "",
       "social_youtube": "",
       "social_linkedin": "",
